docs: update OpenAPI docs and add preview pic
